# howtorobo

Lesson 2-2 Setting up a Simulator/: CMakeLists.txt  CMakeLists.txt_additions.txt  simple_robot.urdf  simple_world.world  simulate_robot.launch.py
Lesson 2-3 Basic Simulation Experiments/: CMakeLists.txt  controllers.yaml  obstacle_course_world.world  package.xml  simple_robot_drive.urdf  simple_robot_drive.urdf.xacro  simulate_robot_drive.launch.py
